--- a/pokoj/templates/pokoj/base.html
+++ b/pokoj/templates/pokoj/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -52,7 +52,6 @@
   <div class="row">
 
     <div class="col-sm-9">
-
       <noscript><p>Uaktywnij bsługę JavaScript.</p></noscript>
 
       <!-- blok tytułu strony -->
