--- a/pokoj/templates/registration/registration_form.html
+++ b/pokoj/templates/registration/registration_form.html
@@ -1,14 +1,29 @@
-{% extends "pokoj/base.html" %}
-
-{% block tytul_h1 %}
-  Tworzenie nowego konta
-{% endblock %}
-
+{% extends "pokoj/base.html" %} 
+{% block tytul_h1 %} Tworzenie nowego konta {% endblock %} 
 {% block tresc %}
-<form action="." method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Utwórz konto" class="btn btn-success">
-    <a href="{% url 'pokoj:index' %}" class="btn btn-default">Wróć do strony głównej</a>
+<form action="." method="post" id="registration_form">
+  {% csrf_token %}
+  <div class="form-group row">
+    <label for="id_username">Nazwa użytkownika:</label>
+    <div class="col-10">
+      <input class="form-control" autofocus="" id="id_username" maxlength="150" name="username" type="text" required="">
+    </div>
+    <span class="helptext">Wymagana. 150 lub mniej znaków. Jedynie litery, cyfry i @/./+/-/_.</span>
+  </div>
+  <div class="form-group row">
+    <label for="id_email">Adres Email:</label>
+    <input class="form-control" id="id_email" name="email" type="email" required> <span class="helptext">Wprowadź swój adres email</span>
+  </div>
+  <div class="form-group row">
+    <label for="id_password1">Hasło:</label>
+    <div class="col-10">
+      <input class="form-control" id="id_password1" name="password1" type="password" required> <span class="helptext">Wprowadź bezpieczne hasło.</span>
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="id_password2">Potwierdzenie hasła:</label> <input class="form-control" id="id_password2" name="password2" type="password" required> <span class="helptext">Wprowadź to samo hasło ponownie, dla weryfikacji.</span></div>
+    <div class="col-10">
+      <input type="submit" value="Utwórz konto" class="btn btn-success"> <a href="{% url 'pokoj:index' %}" class="btn btn-default">Wróć do strony głównej</a>
+    </div>
 </form>
 {% endblock %}
