--- a/pokoj/templates/pokoj/base.html
+++ b/pokoj/templates/pokoj/base.html
@@ -7,21 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="{% static 'pokoj/images/favicon.ico' %}"/>
   <link rel="shortcut icon" href="{% static 'pokoj/images/favicon.ico' %}" />
-
   <title>{% block tytul_head %}Pokój nauczycielski{% endblock %}</title>
-
-  <!-- Latest compiled and minified CSS 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  -->  
   <link href="{% static 'pokoj/css/bootstrap.min.css' %}" rel="stylesheet" >
   <link href="{% static 'pokoj/css/pokoj.css' %}" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="http://csshake.surge.sh/csshake.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="https://use.fontawesome.com/0ffe9023d3.js"></script>
 </head>
 <body>
-
-<!-- Nawigacja -->
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
@@ -37,51 +31,37 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-link"></i> Przydatne linki
+            <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="http://soswinformatyka.pl" target="_blank"><i class="fa fa-link"></i> SOSWInformatyka </a></li>
+            <li><a href="http://soswlublin.pl/wyscigowa" target="_blank"><i class="fa fa-link"></i> SOSWLublin </a></li>
+          </ul>
+        </li>
         {% if not user.is_authenticated %}
-        <li><a href="{% url 'auth_login' %}">Zaloguj</a></li>
-        <li><a href="{% url 'registration_register' %}">Utwórz konto</a></li>
+        <li><a href="{% url 'auth_login' %}"><i class="glyphicon glyphicon-log-in"></i> Zaloguj</a></li>
+        <li><a href="{% url 'registration_register' %}"><i class="fa fa-user-plus"></i> Utwórz konto</a></li>
         {% else %}
         <li><a>Zalogowany jako {{ user.username }}</a></li>
-        <li><a href="{% url 'pokoj:lista' %}">Lista ogłoszeń</a></li>
-        <li><a href="{% url 'auth_logout' %}">Wyloguj [ {{ user.username }} ]</a></li>
+        <li><a href="{% url 'pokoj:lista' %}"><i class="glyphicon glyphicon-th-list"> </i> Lista ogłoszeń</a></li>
+        <li><a href="{% url 'auth_logout' %}"><i class="glyphicon glyphicon-log-out"> </i> Wyloguj [ {{ user.username }} ]</a></li>
         {% endif %}
       </ul>
-    </div><!--/.nav-collapse -->
+    </div>
   </div>
 </nav>
-
-<!-- Treść główna -->
 <div class="container">
-
   <div class="row">
-
-    <div class="col-sm-9">
-      <noscript><p>Uaktywnij bsługę JavaScript.</p></noscript>
-
-      <!-- blok tytułu strony -->
+    <div class="col-sm-12">
+      <noscript><p>Uaktywnij obsługę JavaScript.</p></noscript>
       <h1>{% block tytul_h1 %}{% endblock %}</h1>
-
-      <!-- blok treści -->
       <div class="tresc">
         {% block tresc %}{% endblock %}
       </div>
-
     </div>
-
-    <div class="col-sm-3">
-      <div class="well">
-        <h4>Przydatne linki</h4>
-        <ul>
-          {% block linki_ul %}
-            <li><a href="http://soswlublin.pl">SOSWLublin - strona szkoły</a></li>
-            <li><a href="http://soswinformatyka.pl/">SOSWInformatyka</a></li>
-          {% endblock %}
-        </ul>
-      </div> <!--/well-->
-    </div>
-
-  </div> <!--/row -->
-</div> <!--/container -->
+  </div>
+</div>
 <div class="container footer">
   <footer style="margin-top: 35%;">
     <div class="row">
@@ -89,10 +69,9 @@
         <div class="well">
           Pokój nauczycielski<br>&copy; by Kamil Karpiński 2017 <br /><br />
           Projekt zrealizowany przez ucznia Kamila Karpińskiego w ramach ogólnopolskiej akcji "Koduj z klasą" we współpracy z Centrum Edukacji Obywatelskiej.<br />
-          <a href="https://kodujzklasa.ceo.org.pl/" target="_blank"><img class="shake-slow" src="https://kodujzklasa.ceo.org.pl/sites/kodujzklasa.ceo.org.pl/themes/eduglob/logo.png" /></a>
-          <a href="https://soswinformatyka.pl" target="_blank"><img class="shake-slow" src="http://soswinformatyka.pl/assets/img/logo.png" /></a><br />
-          <a href="https://soswlublin.pl/wyscigowa" target="_blank"><img class="shake-slow" src="http://soswlublin.pl/wyscigowa/templates/september-2012/images/header.png" /></a><br />
-          <a href="https://glowna.ceo.org.pl/" target="_blank"><img class="shake-slow" src="{% static 'pokoj/images/logo.png' %}"/></a>
+          <a href="https://kodujzklasa.ceo.org.pl/" target="_blank"><img src="https://kodujzklasa.ceo.org.pl/sites/kodujzklasa.ceo.org.pl/themes/eduglob/logo.png" /></a>
+          <a href="https://soswinformatyka.pl" target="_blank"><img src="http://soswinformatyka.pl/assets/img/logo.png" /></a>
+          <a href="https://soswlublin.pl/wyscigowa" target="_blank"><img src="http://soswlublin.pl/wyscigowa/templates/september-2012/images/header.png" width="300" height="100"/></a>
         </div>
       </div>
     </div>
