--- a/pokoj/templates/pokoj/ogloszenia_detail.html
+++ b/pokoj/templates/pokoj/ogloszenia_detail.html
@@ -1,12 +1,13 @@
 {% extends "pokoj/base.html" %}
+{% block tytul_h1 %}
+  Szczegóły ogłoszenia
+{% endblock %}
 {% block tresc %}
-<h1>Szczegóły ogłoszenia</h1>
-<table class="table table-hover table-bordered">
-  <tr><td>Tytuł:</td><td>{{ object.tytul }}</td></tr>
-  <tr><td>Opis:</td><td>{{ object.opis }}</td></tr>
-  <tr><td>Dodano:</td><td>{{ object.data }}</td></tr>
-  <tr><td>Autor:</td><td>{{ object.autor }}</td></tr>
-</table>
+
+<blockquote>
+  <p>{{ object.opis }}</p>
+  <footer>Dodano dnia {{ object.data }} przez <cite>{{ object.autor }}</cite></footer>
+</blockquote>
 
 <a href="{% url 'pokoj:lista' %}" class="btn btn-default">Wróć do listy</a>
 {% endblock %}
