--- a/pokoj/templates/pokoj/ogloszenia_form.html
+++ b/pokoj/templates/pokoj/ogloszenia_form.html
@@ -3,10 +3,21 @@
 <h1>Dodaj/Edytuj ogłoszenie</h1>
 <form action="." method="post" id="pform">
   {% csrf_token %}
-  {{ form.as_p }}
-
-  <br /><input type="submit" class="btn btn-success" value="Zapisz">
-  <a href="{% url 'pokoj:lista' %}" class="btn btn-default">Anuluj</a>
+  <div class="form-group row">
+    <label for="id_tytul">Tytuł:</label>
+    <div class="col-10">
+      <input class="form-control" id="id_tytul" maxlength="30" name="tytul" type="text" required value="{{ object.tytul }}">
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="id_opis">Opis:</label>
+    <div class="col-10">
+      <textarea class="form-control" cols="80" id="id_opis" name="opis" rows="14" required="">{{ object.opis }}</textarea>
+    </div>
+  </div>    
+  <div class="col-10">
+      <input type="submit" class="btn btn-success" value="Zapisz"> <a href="{% url 'pokoj:lista' %}" class="btn btn-default">Wróć do listy</a>
+  </div>
 </form>
 
 {% endblock %}
