--- a/pokoj/templates/pokoj/ogloszenia_list.html
+++ b/pokoj/templates/pokoj/ogloszenia_list.html
@@ -5,28 +5,25 @@
 {% endblock %}
 
 {% block tresc %}
-<a href="{% url 'pokoj:dodaj' %}" class="btn btn-success pull-right">Dodaj nowe ogłoszenie</a><br /><br />
-<table class="table table-hover table-bordered">
+<div class="btn-group" style="margin-bottom: 10px;">
+  <a href="{% url 'pokoj:dodaj' %}" class="btn btn-success pull-right"><i class="glyphicon glyphicon-plus"></i> Dodaj nowe ogłoszenie </a>
+</div>
+
+<table class="table table-hover">
 <thead>
-	<tr><th>Lp.</th><th>Tytuł ogłoszenia</th><th>Opis</th><th>Data dodania</th><th colspan="3">Operacje</th></tr>
+	<tr><th>Lp.</th><th>Tytuł ogłoszenia</th><th>Data dodania</th><th>Operacje</th></tr>
 </thead>
 <tbody>
-	{% for p in object_list %}
+	{% for p in object_list reversed %}
 	<tr>
 		<td>{{ forloop.counter }}</td>
 		<td>{{ p.tytul }}</td>
-		<td>{{ p.opis }}</td>
-		<td>Dodane przez {{ p.autor.username }} dnia {{ p.data }}</td>
-		<td>
-        <a href="{% url 'pokoj:info' p.id %}" class="btn btn-default">Szczegóły</a>
-        {% if p.autor.username == user.username %}
-		</td>
-		<td>
-				<a href="{% url 'pokoj:edytuj' p.id %}" class="btn btn-primary">Edytuj</a>
-		</td>
-		<td>
-				<a href="{% url 'pokoj:usun' p.id %}" class="btn btn-danger">Usuń</a>
-		</td>
+		<td>{{ p.data }}</td>
+		<td colspan="3">
+        <a href="{% url 'pokoj:info' p.id %}" class="btn btn-default btn-sm"><i class="glyphicon glyphicon-list-alt"></i> Szczegóły</a>
+        {% if p.autor.username == user.username or user.username == 'administrator' %}
+				<a href="{% url 'pokoj:edytuj' p.id %}" class="btn btn-primary btn-sm"><i class="glyphicon glyphicon-edit"></i> Edytuj</a>
+				<a href="{% url 'pokoj:usun' p.id %}" class="btn btn-danger btn-sm"><i class="glyphicon glyphicon-trash"></i> Usuń</a>
         {% endif %}
 		</td>
 	</tr>
