--- a/pokoj/templates/registration/login.html
+++ b/pokoj/templates/registration/login.html
@@ -5,14 +5,32 @@
 {% endblock %}
 
 {% block tresc %}
-  <form method="post" action="." class="form">
+  <form method="post" action=".">
       {% csrf_token %}
-      {{ form.as_p }}
-    <input type="submit" value="Zaloguj się" class="btn btn-success">
+      <div class="form-group row">
+        <div class="col-3">
+          <label for="id_username">Nazwa użytkownika:</label>
+        </div>
+        <div class="col-9">
+          <input class="form-control" autofocus="" id="id_username" maxlength="254" name="username" type="text" required>
+        </div>
+      </div>
+      <div class="form-group row">
+        <div class="col-3">
+          <label for="id_password1">Hasło:</label>
+        </div>
+        <div class="col-9">
+          <input class="form-control" id="id_password" name="password" type="password" required>
+        </div>
+      </div>
+      <div class="form-group row">
+        <div class="col-3">
+          
+        </div>
+        <div class="col-9">
+          <input type="submit" value="Zaloguj się" class="btn btn-success"> <a href="{% url 'pokoj:index' %}" class="btn btn-default">Wróć do strony głównej</a>
+        </div>
+      </div>
   </form>
-<hr>
-<p>
-  Nie masz konta?<br>
-  <a href="{% url 'registration_register' %}" class="btn btn-primary">Utwórz konto!</a>
-</p>
+
 {% endblock %}
