--- a/pokoj/templates/registration/registration_form.html
+++ b/pokoj/templates/registration/registration_form.html
@@ -21,9 +21,15 @@
     </div>
   </div>
   <div class="form-group row">
-    <label for="id_password2">Potwierdzenie hasła:</label> <input class="form-control" id="id_password2" name="password2" type="password" required> <span class="helptext">Wprowadź to samo hasło ponownie, dla weryfikacji.</span></div>
+    <label for="id_password2">Potwierdzenie hasła:</label>
+    <div class="col-10">
+      <input class="form-control" id="id_password2" name="password2" type="password" required> <span class="helptext">Wprowadź to samo hasło ponownie, dla weryfikacji.</span>
+    </div>
+  </div>
+  <div class="form-group row">
     <div class="col-10">
       <input type="submit" value="Utwórz konto" class="btn btn-success"> <a href="{% url 'pokoj:index' %}" class="btn btn-default">Wróć do strony głównej</a>
     </div>
+  </div>
 </form>
 {% endblock %}
