--- a/pokoj/templates/pokoj/ogloszenia_detail.html
+++ b/pokoj/templates/pokoj/ogloszenia_detail.html
@@ -9,5 +9,5 @@
   <footer>Dodano dnia {{ object.data }} przez <cite>{{ object.autor }}</cite></footer>
 </blockquote>
 
-<a href="{% url 'pokoj:lista' %}" class="btn btn-default">Wróć do listy</a>
+<a href="{% url 'pokoj:lista' %}" class="btn btn-default"><i class="fa fa-reply"></i> Wróć do listy</a>
 {% endblock %}
