--- a/pokoj/templates/pokoj/ogloszenia_form.html
+++ b/pokoj/templates/pokoj/ogloszenia_form.html
@@ -16,7 +16,7 @@
     </div>
   </div>    
   <div class="col-10">
-      <input type="submit" class="btn btn-success" value="Zapisz"> <a href="{% url 'pokoj:lista' %}" class="btn btn-default">Wróć do listy</a>
+      <input type="submit" class="btn btn-success" value="Zapisz"> <a href="{% url 'pokoj:lista' %}" class="btn btn-default"><i class="fa fa-reply"></i> Wróć do listy</a>
   </div>
 </form>
 
