--- a/pokoj/templates/registration/login.html
+++ b/pokoj/templates/registration/login.html
@@ -5,6 +5,16 @@
 {% endblock %}
 
 {% block tresc %}
+
+{% if form.errors %}
+{% if form.non_field_errors %}
+    <ul class='form-errors'>
+        {% for error in form.non_field_errors %}
+            <li>{{ error }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
+{% endif %}
   <form method="post" action=".">
       {% csrf_token %}
       <div class="form-group row">
