--- a/pokoj/templates/registration/registration_form.html
+++ b/pokoj/templates/registration/registration_form.html
@@ -1,6 +1,15 @@
 {% extends "pokoj/base.html" %} 
 {% block tytul_h1 %} Tworzenie nowego konta {% endblock %} 
 {% block tresc %}
+{% if form.errors %}
+  {% if form.non_field_errors %}
+      <ul class='form-errors'>
+          {% for error in form.non_field_errors %}
+              <li>{{ error }}</li>
+          {% endfor %}
+      </ul>
+  {% endif %}
+{% endif %}
 <form action="." method="post" id="registration_form">
   {% csrf_token %}
   <div class="form-group row">
