--- a/pokoj/templates/pokoj/ogloszenia_detail.html
+++ b/pokoj/templates/pokoj/ogloszenia_detail.html
@@ -5,6 +5,9 @@
 {% block tresc %}
 
 <blockquote>
+  <h2>
+    {{ object.tytul }}
+  </h2>
   <p>{{ object.opis }}</p>
   <footer>Dodano dnia {{ object.data }} przez <cite>{{ object.autor }}</cite></footer>
 </blockquote>
