--- a/pokoj/templates/pokoj/index.html
+++ b/pokoj/templates/pokoj/index.html
@@ -1,7 +1,7 @@
 {% extends "pokoj/base.html" %}
 
 {% block tytul_h1 %}
-  <img src="{% static 'pokoj/images/pokojnauczycielski.png' %}"
+  <img src="{% static 'pokoj/images/pokojnauczycielski.png' %}"/>
 {% endblock %}
 
 {% block tresc %}
