--- a/pokoj/templates/pokoj/base.html
+++ b/pokoj/templates/pokoj/base.html
@@ -26,7 +26,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{% url 'pokoj:index' %}">
-        Pokój nauczycielski
+        <img src="{% static 'pokoj/images/favicon.ico' %}" class="obrazek">
       </a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
