--- a/pokoj/templates/pokoj/base.html
+++ b/pokoj/templates/pokoj/base.html
@@ -53,6 +53,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
+      {% block logo %}{% endblock %}
       <noscript><p>Uaktywnij obsługę JavaScript.</p></noscript>
       <h1>{% block tytul_h1 %}{% endblock %}</h1>
       <div class="tresc">
