--- a/pokoj/templates/pokoj/index.html
+++ b/pokoj/templates/pokoj/index.html
@@ -1,7 +1,7 @@
 {% extends "pokoj/base.html" %}
 
 {% block logo %}
-  <img src="{% static 'pokoj/images/favicon.ico' %}" >
+  <img src="/static/pokoj/images/pokojnauczycielski.png" >
 {% endblock %}
 
 {% block tresc %}
