--- a/pokoj/templates/pokoj/ogloszenia_list.html
+++ b/pokoj/templates/pokoj/ogloszenia_list.html
@@ -1,7 +1,7 @@
 {% extends "pokoj/base.html" %}
 
-{% block tytul_h1 %}
-  Lista ogłoszeń
+{% block logo %}
+<img src="/static/pokoj/images/pokojnauczycielski.png" >
 {% endblock %}
 
 {% block tresc %}
