--- a/pokoj/templates/pokoj/ogloszenia_list.html
+++ b/pokoj/templates/pokoj/ogloszenia_list.html
@@ -4,6 +4,10 @@
 <img src="/static/pokoj/images/pokojnauczycielski.png" >
 {% endblock %}
 
+{% block tytul_h1 %}
+  Lista ogłoszeń
+{% endblock %}
+
 {% block tresc %}
 <script type="text/javascript">
 jQuery(document).ready(function($) {
